--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
-<h1> Hello workd. This is my first page with GitHub Pages </h1>
+<h1> Hello world. This is my first page with GitHub Pages </h1>
 <p>Thanks GitHub!</p>
 </html>
